Opened 5 years ago

Closed 4 years ago

#16092 closed bug (fixed)

[Installer] Fix 'clean install' from image

Reported by: nielx Owned by: nielx
Priority: blocker Milestone: R1/beta3
Component: Applications/Installer Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

As noted in #15808, the Installer promises to offer a 'clean' install when installing to an existing partition, but it does not actually work.

The Installer promises to clean up the system folder (except for settings), but it does not actually do that. The consequence is that the updated partition does not activate the new packages. This eventually leads to failures when an update is done using pkgman, because the package kit will not apply downloaded packages that already exist on disk.

This situation needs to be resolved: there is value in doing a clean install using the installer, but this needs to be implemented.

Change History (5)

comment:1 by bitigchi, 5 years ago

Blocking: 16217 added

comment:2 by nielx, 4 years ago

Owner: changed from nobody to nielx
Status: newin-progress

comment:3 by pulkomandy, 4 years ago

Priority: normalblocker

comment:4 by pulkomandy, 4 years ago

Blocking: 16217 removed

comment:5 by nielx, 4 years ago

Resolution: fixed
Status: in-progressclosed
Note: See TracTickets for help on using tickets.